dependencies/kelivo_secure_core/native/include/kelivo_secure_core.h

typedef int32_t KelivoStatus;
typedef int32_t (*KelivoSqlCipherKeyCallback)(
    void *database,
    const void *key,
    int32_t key_length);
typedef int32_t (*KelivoSqlitePrepareCallback)(
    void *database,
    const char *sql,
    int32_t sql_length,
    void **out_statement,
    const char **sql_tail);
typedef void (*KelivoSqliteDestructor)(void *value);
typedef int32_t (*KelivoSqliteBindTextCallback)(
    void *statement,
    int32_t index,
    const char *value,
    int32_t value_length,
    KelivoSqliteDestructor destructor);
typedef int32_t (*KelivoSqliteBindBlobCallback)(
    void *statement,
    int32_t index,
    const void *value,
    int32_t value_length,
    KelivoSqliteDestructor destructor);
typedef int32_t (*KelivoSqliteStepCallback)(void *statement);
typedef int32_t (*KelivoSqliteFinalizeCallback)(void *statement);
/*
 * 固定为 32 字节的 ABI v1 能力结构。reserved 字段必须忽略；
 * 任何扩大结构的变更都必须提升 ABI 并新增函数，禁止改变本结构大小。
 */
typedef struct KelivoCoreCapabilities {
  uint32_t struct_size;
  uint32_t abi_version;
  uint64_t flags;
  uint32_t secure_storage_backend;
  uint32_t reserved[3];
} KelivoCoreCapabilities;
/* 返回当前动态库实现的 ABI 版本，不会访问任何平台密钥设施。 */
KELIVO_CORE_API uint32_t kelivo_core_abi_version(void);
/*
 * 写入当前平台能力。out_capabilities_size 必须至少为 v1 固定结构大小；
 * 缓冲区不足时不写入任何字节；后端和能力必须按当前平台如实返回。
 */
KELIVO_CORE_API KelivoStatus kelivo_core_get_capabilities(
    KelivoCoreCapabilities *out_capabilities,
    size_t out_capabilities_size);
/*
 * slot_id 必须指向恰好 16 字节的稳定槽位标识，policy_version 必须为 v1；
 * 指针必须覆盖声明的可读长度。创建不得覆盖既有槽位。失败时，只要
 * out_handle 可写，其值都会被置为无效句柄零。
 */
KELIVO_CORE_API KelivoStatus kelivo_key_slot_create(
    const uint8_t *slot_id,
    size_t slot_id_length,
    uint32_t policy_version,
    uint64_t *out_handle);
/*
 * 打开已有槽位的参数约束与创建相同。句柄只允许作为不透明值传回本库，
 * 调用方不得从句柄推断或读取任何密钥材料；解包失败不得回退或新建密钥。
 */
KELIVO_CORE_API KelivoStatus kelivo_key_slot_open(
    const uint8_t *slot_id,
    size_t slot_id_length,
    uint32_t policy_version,
    uint64_t *out_handle);
/*
 * 删除本机平台安全存储中的槽位。目标不存在时幂等成功；同进程仍持有该
 * 槽位句柄时返回 SLOT_IN_USE。调用方必须先关闭相关句柄，本函数不会代为
 * 关闭或使已取出的密钥失效；系统存储错误不得伪装为成功。
 */
KELIVO_CORE_API KelivoStatus kelivo_key_slot_delete(
    const uint8_t *slot_id,
    size_t slot_id_length,
    uint32_t policy_version);
/*
 * 关闭非零不透明句柄。句柄仅在当前进程内有效，关闭后永久失效且数值不得
 * 在同一进程内复用；成功关闭必须先从句柄表移除并清零对应密钥材料。
 */
KELIVO_CORE_API KelivoStatus kelivo_key_handle_close(uint64_t handle);
/*
 * 从句柄主密钥按 database_id 与 epoch 派生独立的 32 字节 SQLCipher 密钥，
 * 并在本库内同步交给 SQLite 原生设键函数。database_id 必须恰好 16 字节，
 * epoch 必须非零。回调不得保存 key 指针；密钥不会通过 ABI 输出给调用方。
 */
KELIVO_CORE_API KelivoStatus kelivo_sqlcipher_key_apply(
    uint64_t handle,
    const uint8_t *database_id,
    size_t database_id_length,
    uint64_t epoch,
    void *database,
    KelivoSqlCipherKeyCallback key_callback);
/*
 * 在本库内派生密钥，并通过同一 SQLite 资产的预编译、绑定、执行回调完成
 * ATTACH。database_path 必须指向既有普通文件，并且是无 NUL 的 UTF-8 路径；
 * database_name 必须是 1 到 64 字节的 ASCII 标识符且不得为 main 或 temp。
 * 密钥只会绑定为 BLOB，不会写入 SQL 文本或通过 ABI 输出给调用方。
 */
KELIVO_CORE_API KelivoStatus kelivo_sqlcipher_database_attach(
    uint64_t handle,
    const uint8_t *database_id,
    size_t database_id_length,
    uint64_t epoch,
    void *database,
    const uint8_t *database_path,
    size_t database_path_length,
    const uint8_t *database_name,
    size_t database_name_length,
    KelivoSqlitePrepareCallback prepare_callback,
    KelivoSqliteBindTextCallback bind_text_callback,
    KelivoSqliteBindBlobCallback bind_blob_callback,
    KelivoSqliteStepCallback step_callback,
    KelivoSqliteFinalizeCallback finalize_callback);
/*
 * 使用句柄中的 epoch 主密钥密封一条记录。record_id 必须恰好 16 字节，
 * epoch 必须非零；算法套件、HKDF 域分离、随机 nonce 与确定性 CBOR 信封
 * 均由本库控制。输出容量不足时只写 required length，不消耗随机数且不写
 * out_envelope。associated_data 与 plaintext 长度为零时允许传入空指针。
 */
KELIVO_CORE_API KelivoStatus kelivo_record_seal(
    uint64_t handle,
    const uint8_t *record_id,
    size_t record_id_length,
    uint64_t epoch,
    const uint8_t *associated_data,
    size_t associated_data_length,
    const uint8_t *plaintext,
    size_t plaintext_length,
    uint8_t *out_envelope,
    size_t out_envelope_capacity,
    size_t *out_envelope_length);
/*
 * 开启 v1 记录信封。调用方必须提供预期 record_id、epoch 与关联数据；
 * 任一不匹配、密文篡改或认证失败均不得写出明文。输出容量查询只解析
 * 有界的规范 CBOR 结构，实际开启时再次完成 AEAD 认证。
 */
KELIVO_CORE_API KelivoStatus kelivo_record_open(
    uint64_t handle,
    const uint8_t *record_id,
    size_t record_id_length,
    uint64_t epoch,
    const uint8_t *associated_data,
    size_t associated_data_length,
    const uint8_t *envelope,
    size_t envelope_length,
    uint8_t *out_plaintext,
    size_t out_plaintext_capacity,
    size_t *out_plaintext_length);
/*
 * 使用不透明账户根密钥句柄密封云同步记录。key_epoch 必须非零且会同时参与
 * 记录密钥派生和信封认证；原始账户根密钥不会通过 ABI 输出。
 */
KELIVO_CORE_API KelivoStatus kelivo_account_record_seal(
    uint64_t ark_handle,
    const uint8_t *record_id,
    size_t record_id_length,
    uint32_t key_epoch,
    const uint8_t *associated_data,
    size_t associated_data_length,
    const uint8_t *plaintext,
    size_t plaintext_length,
    uint8_t *out_envelope,
    size_t out_envelope_capacity,
    size_t *out_envelope_length);
/*
 * 使用不透明账户根密钥句柄开启云同步记录。错误账户根密钥、key_epoch、
 * record_id、关联数据或篡改信封均不得写出明文。
 */
KELIVO_CORE_API KelivoStatus kelivo_account_record_open(
    uint64_t ark_handle,
    const uint8_t *record_id,
    size_t record_id_length,
    uint32_t key_epoch,
    const uint8_t *associated_data,
    size_t associated_data_length,
    const uint8_t *envelope,
    size_t envelope_length,
    uint8_t *out_plaintext,
    size_t out_plaintext_capacity,
    size_t *out_plaintext_length);
/*
 * 原子生成随机 UUIDv4 附件标识和随机附件数据密钥。密钥只以当前进程内的
 * 不透明句柄返回；容量不足时不读取随机源，也不创建句柄。
 */
KELIVO_CORE_API KelivoStatus kelivo_attachment_data_key_generate(
    uint64_t *out_handle,
    uint8_t *out_attachment_id,
    size_t out_attachment_id_capacity,
    size_t *out_attachment_id_length);
/*
 * 幂等关闭附件数据密钥句柄。关闭后所有加密、解密和包装操作必须失败关闭。
 */
KELIVO_CORE_API KelivoStatus kelivo_attachment_data_key_handle_close(
    uint64_t handle);
/*
 * 使用 ARK 包装附件数据密钥。上下文严格绑定 UUIDv4 用户、随机 UUIDv4 附件
 * 标识与正 uint32 key epoch；输出容量查询不消耗随机数。
 */
KELIVO_CORE_API KelivoStatus kelivo_attachment_data_key_wrap(
    uint64_t ark_handle,
    uint64_t data_key_handle,
    const uint8_t *user_id,
    size_t user_id_length,
    const uint8_t *attachment_id,
    size_t attachment_id_length,
    uint32_t key_epoch,
    uint8_t *out_wrapped_key,
    size_t out_wrapped_key_capacity,
    size_t *out_wrapped_key_length);
/*
 * 认证并解包附件数据密钥。任何 ARK 或上下文错配、截断或篡改均不得创建句柄。
 */
KELIVO_CORE_API KelivoStatus kelivo_attachment_data_key_unwrap(
    uint64_t ark_handle,
    const uint8_t *user_id,
    size_t user_id_length,
    const uint8_t *attachment_id,
    size_t attachment_id_length,
    uint32_t key_epoch,
    const uint8_t *wrapped_key,
    size_t wrapped_key_length,
    uint64_t *out_handle);
/*
 * 独立密封规范附件块。上下文绑定账户、附件、epoch、块序号、块总数、总明文
 * 长度和本块明文长度；upload_id 是 create 后返回的 UUIDv4。非末块固定为
 * 4194184 字节，使完整密文不超过服务端 4 MiB 上限；空附件固定为一个零长度块。
 */
KELIVO_CORE_API KelivoStatus kelivo_attachment_chunk_seal(
    uint64_t data_key_handle,
    const uint8_t *user_id,
    size_t user_id_length,
    const uint8_t *attachment_id,
    size_t attachment_id_length,
    const uint8_t *upload_id,
    size_t upload_id_length,
    uint32_t key_epoch,
    uint32_t chunk_index,
    uint32_t chunk_count,
    uint64_t total_plaintext_bytes,
    const uint8_t *plaintext,
    size_t plaintext_length,
    uint8_t *out_envelope,
    size_t out_envelope_capacity,
    size_t *out_envelope_length);
/*
 * 认证并开启单个附件块。调用方必须提供全部预期上下文；错误块、重排、替换、
 * 截断、跨账户、跨 upload 或跨 epoch 均不得写出明文。
 */
KELIVO_CORE_API KelivoStatus kelivo_attachment_chunk_open(
    uint64_t data_key_handle,
    const uint8_t *user_id,
    size_t user_id_length,
    const uint8_t *attachment_id,
    size_t attachment_id_length,
    const uint8_t *upload_id,
    size_t upload_id_length,
    uint32_t key_epoch,
    uint32_t chunk_index,
    uint32_t chunk_count,
    uint64_t total_plaintext_bytes,
    size_t plaintext_length,
    const uint8_t *envelope,
    size_t envelope_length,
    uint8_t *out_plaintext,
    size_t out_plaintext_capacity,
    size_t *out_plaintext_length);
/*
 * 以 password 启动客户端注册。密码只在调用期间由 Rust 读取，不会进入输出消息。
 * 状态仅作为当前进程内的不透明句柄保存；失败时可写的 out_state_handle 与
 * out_request_length 会先归零。输出缓冲区必须至少容纳固定大小的注册请求。
 * 输入字节区、输出字节区以及两个输出标量区必须彼此完全不重叠。
 */
KELIVO_CORE_API KelivoStatus kelivo_opaque_client_registration_start(
    const uint8_t *password,
    size_t password_length,
    uint64_t *out_state_handle,
    uint8_t *out_request,
    size_t out_request_capacity,
    size_t *out_request_length);
/*
 * 以服务端 RegistrationResponse 完成客户端注册并输出 RegistrationUpload。
 * credential_identifier 必须为服务端分配的 RFC 4122 UUIDv4 原始 16 字节。
 * 只要 out_upload_length 可写，有效状态句柄即在本次调用中单次消费；成功、
 * 协议失败或参数失败后均不可复用。密码和客户端秘密状态都不会跨出 Rust。
 * 所有输入字节区、输出字节区与输出长度标量区必须彼此完全不重叠。
 */
KELIVO_CORE_API KelivoStatus kelivo_opaque_client_registration_finish(
    uint64_t state_handle,
    const uint8_t *password,
    size_t password_length,
    const uint8_t *response,
    size_t response_length,
    const uint8_t *credential_identifier,
    size_t credential_identifier_length,
    uint8_t *out_upload,
    size_t out_upload_capacity,
    size_t *out_upload_length);
/*
 * 以 password 启动客户端登录并输出 CredentialRequest。密码不进入请求消息，
 * ClientLoginState 只存在于 Rust 句柄表。输出约束与注册开始相同，各输入、
 * 输出字节区和输出标量区必须彼此完全不重叠。
 */
KELIVO_CORE_API KelivoStatus kelivo_opaque_client_login_start(
    const uint8_t *password,
    size_t password_length,
    uint64_t *out_state_handle,
    uint8_t *out_request,
    size_t out_request_capacity,
    size_t *out_request_length);
/*
 * 以服务端 CredentialResponse 完成客户端认证并输出 CredentialFinalization。
 * credential_identifier 使用与注册相同的 UUIDv4 原始 16 字节。
 * OPAQUE session key 与 export key 会在 Rust 内归零销毁，绝不通过本接口返回，
 * 也不得用于 ARK。有效状态句柄的单次消费规则与注册完成相同；所有输入字节区、
 * 输出字节区与输出长度标量区必须彼此完全不重叠。
 */
KELIVO_CORE_API KelivoStatus kelivo_opaque_client_login_finish(
    uint64_t state_handle,
    const uint8_t *password,
    size_t password_length,
    const uint8_t *response,
    size_t response_length,
    const uint8_t *credential_identifier,
    size_t credential_identifier_length,
    uint8_t *out_finalization,
    size_t out_finalization_capacity,
    size_t *out_finalization_length);
/*
 * 取消尚未完成的客户端注册或登录状态。关闭成功后句柄永久失效且同一进程内
 * 不会复用；本接口不接受服务端登录状态或任何可序列化秘密状态。
 */
KELIVO_CORE_API KelivoStatus kelivo_opaque_client_state_close(
    uint64_t state_handle);
/*
 * 生成设备 Ed25519/X25519 身份。私钥只保存在当前进程的不透明句柄内；
 * 失败时 out_handle 先写零，不提供任何私钥导出函数。
 */
KELIVO_CORE_API KelivoStatus kelivo_device_identity_generate(
    uint64_t *out_handle);
/*
 * 输出固定 64 字节公开材料：Ed25519 公钥在前，X25519 公钥在后。
 */
KELIVO_CORE_API KelivoStatus kelivo_device_identity_public_keys(
    uint64_t identity_handle,
    uint8_t *out_public_keys,
    size_t out_public_keys_capacity,
    size_t *out_public_keys_length);
/*
 * 严格验证外部 Ed25519 公钥：拒绝非规范编码、小阶点和扭转分量。
 */
KELIVO_CORE_API KelivoStatus kelivo_device_signing_public_key_validate(
    const uint8_t *public_key,
    size_t public_key_length);
/*
 * 严格验证外部 X25519 公钥：必须能完成 HPKE 封装且不能产生全零共享值。
 */
KELIVO_CORE_API KelivoStatus kelivo_device_key_agreement_public_key_validate(
    const uint8_t *public_key,
    size_t public_key_length);
KELIVO_CORE_API KelivoStatus kelivo_device_identity_handle_close(
    uint64_t identity_handle);