dependencies/kelivo_secure_core/lib/kelivo_secure_core_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

@ffi.Native<ffi.Uint32 Function()>()
external int kelivo_core_abi_version();

@ffi.Native<
  KelivoStatus Function(ffi.Pointer<KelivoCoreCapabilities>, ffi.Size)
>()
external int kelivo_core_get_capabilities(
  ffi.Pointer<KelivoCoreCapabilities> out_capabilities,
  int out_capabilities_size,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint64>,
  )
>()
external int kelivo_key_slot_create(
  ffi.Pointer<ffi.Uint8> slot_id,
  int slot_id_length,
  int policy_version,
  ffi.Pointer<ffi.Uint64> out_handle,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint64>,
  )
>()
external int kelivo_key_slot_open(
  ffi.Pointer<ffi.Uint8> slot_id,
  int slot_id_length,
  int policy_version,
  ffi.Pointer<ffi.Uint64> out_handle,
);

@ffi.Native<
  KelivoStatus Function(ffi.Pointer<ffi.Uint8>, ffi.Size, ffi.Uint32)
>()
external int kelivo_key_slot_delete(
  ffi.Pointer<ffi.Uint8> slot_id,
  int slot_id_length,
  int policy_version,
);

@ffi.Native<KelivoStatus Function(ffi.Uint64)>()
external int kelivo_key_handle_close(int handle);

@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint64,
    ffi.Pointer<ffi.Void>,
    KelivoSqlCipherKeyCallback,
  )
>()
external int kelivo_sqlcipher_key_apply(
  int handle,
  ffi.Pointer<ffi.Uint8> database_id,
  int database_id_length,
  int epoch,
  ffi.Pointer<ffi.Void> database,
  KelivoSqlCipherKeyCallback key_callback,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint64,
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    KelivoSqlitePrepareCallback,
    KelivoSqliteBindTextCallback,
    KelivoSqliteBindBlobCallback,
    KelivoSqliteStepCallback,
    KelivoSqliteFinalizeCallback,
  )
>()
external int kelivo_sqlcipher_database_attach(
  int handle,
  ffi.Pointer<ffi.Uint8> database_id,
  int database_id_length,
  int epoch,
  ffi.Pointer<ffi.Void> database,
  ffi.Pointer<ffi.Uint8> database_path,
  int database_path_length,
  ffi.Pointer<ffi.Uint8> database_name,
  int database_name_length,
  KelivoSqlitePrepareCallback prepare_callback,
  KelivoSqliteBindTextCallback bind_text_callback,
  KelivoSqliteBindBlobCallback bind_blob_callback,
  KelivoSqliteStepCallback step_callback,
  KelivoSqliteFinalizeCallback finalize_callback,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int kelivo_record_seal(
  int handle,
  ffi.Pointer<ffi.Uint8> record_id,
  int record_id_length,
  int epoch,
  ffi.Pointer<ffi.Uint8> associated_data,
  int associated_data_length,
  ffi.Pointer<ffi.Uint8> plaintext,
  int plaintext_length,
  ffi.Pointer<ffi.Uint8> out_envelope,
  int out_envelope_capacity,
  ffi.Pointer<ffi.Size> out_envelope_length,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int kelivo_record_open(
  int handle,
  ffi.Pointer<ffi.Uint8> record_id,
  int record_id_length,
  int epoch,
  ffi.Pointer<ffi.Uint8> associated_data,
  int associated_data_length,
  ffi.Pointer<ffi.Uint8> envelope,
  int envelope_length,
  ffi.Pointer<ffi.Uint8> out_plaintext,
  int out_plaintext_capacity,
  ffi.Pointer<ffi.Size> out_plaintext_length,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int kelivo_account_record_seal(
  int ark_handle,
  ffi.Pointer<ffi.Uint8> record_id,
  int record_id_length,
  int key_epoch,
  ffi.Pointer<ffi.Uint8> associated_data,
  int associated_data_length,
  ffi.Pointer<ffi.Uint8> plaintext,
  int plaintext_length,
  ffi.Pointer<ffi.Uint8> out_envelope,
  int out_envelope_capacity,
  ffi.Pointer<ffi.Size> out_envelope_length,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int kelivo_account_record_open(
  int ark_handle,
  ffi.Pointer<ffi.Uint8> record_id,
  int record_id_length,
  int key_epoch,
  ffi.Pointer<ffi.Uint8> associated_data,
  int associated_data_length,
  ffi.Pointer<ffi.Uint8> envelope,
  int envelope_length,
  ffi.Pointer<ffi.Uint8> out_plaintext,
  int out_plaintext_capacity,
  ffi.Pointer<ffi.Size> out_plaintext_length,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Pointer<ffi.Uint64>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int kelivo_attachment_data_key_generate(
  ffi.Pointer<ffi.Uint64> out_handle,
  ffi.Pointer<ffi.Uint8> out_attachment_id,
  int out_attachment_id_capacity,
  ffi.Pointer<ffi.Size> out_attachment_id_length,
);

@ffi.Native<KelivoStatus Function(ffi.Uint64)>()
external int kelivo_attachment_data_key_handle_close(int handle);

@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int kelivo_attachment_data_key_wrap(
  int ark_handle,
  int data_key_handle,
  ffi.Pointer<ffi.Uint8> user_id,
  int user_id_length,
  ffi.Pointer<ffi.Uint8> attachment_id,
  int attachment_id_length,
  int key_epoch,
  ffi.Pointer<ffi.Uint8> out_wrapped_key,
  int out_wrapped_key_capacity,
  ffi.Pointer<ffi.Size> out_wrapped_key_length,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint64>,
  )
>()
external int kelivo_attachment_data_key_unwrap(
  int ark_handle,
  ffi.Pointer<ffi.Uint8> user_id,
  int user_id_length,
  ffi.Pointer<ffi.Uint8> attachment_id,
  int attachment_id_length,
  int key_epoch,
  ffi.Pointer<ffi.Uint8> wrapped_key,
  int wrapped_key_length,
  ffi.Pointer<ffi.Uint64> out_handle,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int kelivo_attachment_chunk_seal(
  int data_key_handle,
  ffi.Pointer<ffi.Uint8> user_id,
  int user_id_length,
  ffi.Pointer<ffi.Uint8> attachment_id,
  int attachment_id_length,
  ffi.Pointer<ffi.Uint8> upload_id,
  int upload_id_length,
  int key_epoch,
  int chunk_index,
  int chunk_count,
  int total_plaintext_bytes,
  ffi.Pointer<ffi.Uint8> plaintext,
  int plaintext_length,
  ffi.Pointer<ffi.Uint8> out_envelope,
  int out_envelope_capacity,
  ffi.Pointer<ffi.Size> out_envelope_length,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint64,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int kelivo_attachment_chunk_open(
  int data_key_handle,
  ffi.Pointer<ffi.Uint8> user_id,
  int user_id_length,
  ffi.Pointer<ffi.Uint8> attachment_id,
  int attachment_id_length,
  ffi.Pointer<ffi.Uint8> upload_id,
  int upload_id_length,
  int key_epoch,
  int chunk_index,
  int chunk_count,
  int total_plaintext_bytes,
  int plaintext_length,
  ffi.Pointer<ffi.Uint8> envelope,
  int envelope_length,
  ffi.Pointer<ffi.Uint8> out_plaintext,
  int out_plaintext_capacity,
  ffi.Pointer<ffi.Size> out_plaintext_length,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint64>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int kelivo_opaque_client_registration_start(
  ffi.Pointer<ffi.Uint8> password,
  int password_length,
  ffi.Pointer<ffi.Uint64> out_state_handle,
  ffi.Pointer<ffi.Uint8> out_request,
  int out_request_capacity,
  ffi.Pointer<ffi.Size> out_request_length,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int kelivo_opaque_client_registration_finish(
  int state_handle,
  ffi.Pointer<ffi.Uint8> password,
  int password_length,
  ffi.Pointer<ffi.Uint8> response,
  int response_length,
  ffi.Pointer<ffi.Uint8> credential_identifier,
  int credential_identifier_length,
  ffi.Pointer<ffi.Uint8> out_upload,
  int out_upload_capacity,
  ffi.Pointer<ffi.Size> out_upload_length,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint64>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int kelivo_opaque_client_login_start(
  ffi.Pointer<ffi.Uint8> password,
  int password_length,
  ffi.Pointer<ffi.Uint64> out_state_handle,
  ffi.Pointer<ffi.Uint8> out_request,
  int out_request_capacity,
  ffi.Pointer<ffi.Size> out_request_length,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int kelivo_opaque_client_login_finish(
  int state_handle,
  ffi.Pointer<ffi.Uint8> password,
  int password_length,
  ffi.Pointer<ffi.Uint8> response,
  int response_length,
  ffi.Pointer<ffi.Uint8> credential_identifier,
  int credential_identifier_length,
  ffi.Pointer<ffi.Uint8> out_finalization,
  int out_finalization_capacity,
  ffi.Pointer<ffi.Size> out_finalization_length,
);

@ffi.Native<KelivoStatus Function(ffi.Uint64)>()
external int kelivo_opaque_client_state_close(int state_handle);

@ffi.Native<KelivoStatus Function(ffi.Pointer<ffi.Uint64>)>()
external int kelivo_device_identity_generate(
  ffi.Pointer<ffi.Uint64> out_handle,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int kelivo_device_identity_public_keys(
  int identity_handle,
  ffi.Pointer<ffi.Uint8> out_public_keys,
  int out_public_keys_capacity,
  ffi.Pointer<ffi.Size> out_public_keys_length,
);

@ffi.Native<KelivoStatus Function(ffi.Pointer<ffi.Uint8>, ffi.Size)>()
external int kelivo_device_signing_public_key_validate(
  ffi.Pointer<ffi.Uint8> public_key,
  int public_key_length,
);

@ffi.Native<KelivoStatus Function(ffi.Pointer<ffi.Uint8>, ffi.Size)>()
external int kelivo_device_key_agreement_public_key_validate(
  ffi.Pointer<ffi.Uint8> public_key,
  int public_key_length,
);

@ffi.Native<KelivoStatus Function(ffi.Uint64)>()
external int kelivo_device_identity_handle_close(int identity_handle);
